crates/oxc_react_compiler/tests/snapshots/recursive-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/recursive-function.js
---
import { c as _c } from "react/compiler-runtime";
function foo(x) {
	const $ = _c(4);
	if (x <= 0) {
		return 0;
	}
	const t0 = x - 1;
	let t1;
	if ($[0] !== t0) {
		t1 = foo(t0);
		$[0] = t0;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const t2 = x - 2;
	let t3;
	if ($[2] !== t2) {
		t3 = foo(t2);
		$[2] = t2;
		$[3] = t3;
	} else {
		t3 = $[3];
	}
	return x + t1 + t3;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [10]
};
