crates/oxc_react_compiler/tests/snapshots/reduce-reactive-cond-deps-break-in-scope.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reduce-reactive-cond-deps-break-in-scope.ts
---
import { c as _c } from "react/compiler-runtime";
function useFoo(t0) {
	const $ = _c(3);
	const { obj, objIsNull } = t0;
	let x;
	if ($[0] !== obj || $[1] !== objIsNull) {
		x = [];
		bb0: {
			if (objIsNull) {
				break bb0;
			} else {
				x.push(obj.a);
			}
			x.push(obj.b);
		}
		$[0] = obj;
		$[1] = objIsNull;
		$[2] = x;
	} else {
		x = $[2];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		obj: null,
		objIsNull: true
	}],
	sequentialRenders: [{
		obj: null,
		objIsNull: true
	}, {
		obj: { a: 2 },
		objIsNull: false
	}]
};
