crates/oxc_react_compiler/tests/snapshots/ref-current-aliased-not-added-to-dep-2.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ref-current-aliased-not-added-to-dep-2.js
---
import { c as _c } from "react/compiler-runtime";
// @validateRefAccessDuringRender:false
function Foo(t0) {
	const $ = _c(2);
	const { a } = t0;
	const ref = useRef();
	const val = ref.current;
	let t1;
	if ($[0] !== a) {
		const x = {
			a,
			val
		};
		t1 = <VideoList videos={x} />;
		$[0] = a;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
