crates/oxc_react_compiler/tests/snapshots/ref-current-field-write-not-added-to-dep.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ref-current-field-write-not-added-to-dep.js
---
import { c as _c } from "react/compiler-runtime";
import { useRef } from "react";
function Component() {
	const $ = _c(2);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = { text: { value: null } };
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const ref = useRef(t0);
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		const inputChanged = (e) => {
			ref.current.text.value = e.target.value;
		};
		t1 = <input onChange={inputChanged} />;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
