crates/oxc_react_compiler/tests/snapshots/ref-current-write-not-added-to-dep.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ref-current-write-not-added-to-dep.js
---
import { c as _c } from "react/compiler-runtime";
function VideoTab() {
	const $ = _c(1);
	const ref = useRef();
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const x = () => {
			ref.current = 1;
		};
		t0 = <VideoList videos={x} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
